# bettercheck

./: .gitignore  Doc1-PythonPrePip.md  MANIFEST.in  README.md  Setup.py  bettercheck-yourself.json  bettercheck-yourself.md  file_scan_example.json  file_scan_example.md  pybersec-report-1.json  pyproject.toml  pytest.ini  requirements-dev.txt  tox.ini
.github/workflows/python-package.yml/: bettercheck.yml
Examples/: FlaskRecursive.md  check_recursive.py  check_single_package.py  package_report.py  requests_package_report-recursive.md
bettercheck/: check_yourself.py  checker.py  cli.py  report_utils.py  security.py
package_checker/: __init__.py  checker.py  cli.py
pybersec/: check_yourself.py  checker.py  cli.py
src/bettercheck/: __init__.py  check_yourself.py  checker.py  cli.py  dep_tree.py  report_utils.py  scanner.py  security.py
tests/: conftest.py  test_checker.py  test_cli.py  test_dep_tree.py  test_report_utils.py  test_security.py
